// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|Sidebar/SidebarItem component 1`] = `
.emotion-1 {
  fill: currentColor;
}

.emotion-3 {
  margin-left: -20px;
  margin-right: -20px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  cursor: pointer;
}

.emotion-3:hover {
  background: rgba(0,0,0,.05);
}

.emotion-0 {
  display: block;
  width: 0;
  height: 0;
  margin-right: 4px;
  border-top: 3.5px solid transparent;
  border-bottom: 3.5px solid transparent;
  border-left: 3.5px solid #999999;
  -webkit-transition: -webkit-transform .1s ease-out;
  -webkit-transition: transform .1s ease-out;
  transition: transform .1s ease-out;
}

.emotion-2 {
  display: block;
  width: 10px;
  height: 10px;
  margin-right: 6px;
  color: #1ea7fd;
}

<div
  style="width:240px;padding:20px;background:#eee"
>
  <div
    class="emotion-3"
  >
    <span
      class="emotion-0"
    />
    <svg
      class="emotion-2"
      height="20px"
      viewBox="0 0 1024 1024"
      width="20px"
    >
      <path
        class="emotion-1"
        d="M171 469h298V171H246c-42 0-75 33-75 75v223zm0 86v223c0 42 33 75 75 75h223V555H171zm682-86V246c0-42-33-75-75-75H555v298h298zm0 86H555v298h223c42 0 75-33 75-75V555zM256 85h512c94 0 171 77 171 171v512c0 94-77 171-171 171H256c-94 0-171-77-171-171V256c0-94 77-171 171-171z"
      />
    </svg>
    <span>
      Component
    </span>
  </div>
</div>
`;

exports[`Storyshots UI|Sidebar/SidebarItem component isExpanded 1`] = `
.emotion-1 {
  fill: currentColor;
}

.emotion-3 {
  margin-left: -20px;
  margin-right: -20px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  cursor: pointer;
}

.emotion-3:hover {
  background: rgba(0,0,0,.05);
}

.emotion-2 {
  display: block;
  width: 10px;
  height: 10px;
  margin-right: 6px;
  color: #1ea7fd;
}

.emotion-0 {
  display: block;
  width: 0;
  height: 0;
  margin-right: 4px;
  border-top: 3.5px solid transparent;
  border-bottom: 3.5px solid transparent;
  border-left: 3.5px solid #999999;
  -webkit-transition: -webkit-transform .1s ease-out;
  -webkit-transition: transform .1s ease-out;
  transition: transform .1s ease-out;
  -webkit-transform: rotateZ(90deg);
  -ms-transform: rotateZ(90deg);
  transform: rotateZ(90deg);
}

<div
  style="width:240px;padding:20px;background:#eee"
>
  <div
    class="emotion-3"
  >
    <span
      class="emotion-0"
    />
    <svg
      class="emotion-2"
      height="20px"
      viewBox="0 0 1024 1024"
      width="20px"
    >
      <path
        class="emotion-1"
        d="M171 469h298V171H246c-42 0-75 33-75 75v223zm0 86v223c0 42 33 75 75 75h223V555H171zm682-86V246c0-42-33-75-75-75H555v298h298zm0 86H555v298h223c42 0 75-33 75-75V555zM256 85h512c94 0 171 77 171 171v512c0 94-77 171-171 171H256c-94 0-171-77-171-171V256c0-94 77-171 171-171z"
      />
    </svg>
    <span>
      Component
    </span>
  </div>
</div>
`;

exports[`Storyshots UI|Sidebar/SidebarItem folder 1`] = `
.emotion-1 {
  fill: currentColor;
}

.emotion-3 {
  margin-left: -20px;
  margin-right: -20px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  cursor: pointer;
}

.emotion-3:hover {
  background: rgba(0,0,0,.05);
}

.emotion-0 {
  display: block;
  width: 0;
  height: 0;
  margin-right: 4px;
  border-top: 3.5px solid transparent;
  border-bottom: 3.5px solid transparent;
  border-left: 3.5px solid #999999;
  -webkit-transition: -webkit-transform .1s ease-out;
  -webkit-transition: transform .1s ease-out;
  transition: transform .1s ease-out;
}

.emotion-2 {
  display: block;
  width: 10px;
  height: 10px;
  margin-right: 6px;
  color: #774dd7;
}

<div
  style="width:240px;padding:20px;background:#eee"
>
  <div
    class="emotion-3"
  >
    <span
      class="emotion-0"
    />
    <svg
      class="emotion-2"
      height="20px"
      viewBox="0 0 1024 1024"
      width="20px"
    >
      <path
        class="emotion-1"
        d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
      />
    </svg>
    <span>
      Folder
    </span>
  </div>
</div>
`;

exports[`Storyshots UI|Sidebar/SidebarItem loading 1`] = `
@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

.emotion-1 {
  fill: currentColor;
}

.emotion-0 {
  display: block;
  width: 0;
  height: 0;
  margin-right: 4px;
  border-top: 3.5px solid transparent;
  border-bottom: 3.5px solid transparent;
  border-left: 3.5px solid #999999;
  -webkit-transition: -webkit-transform .1s ease-out;
  -webkit-transition: transform .1s ease-out;
  transition: transform .1s ease-out;
  border-left-color: transparent;
}

.emotion-2 {
  display: block;
  width: 10px;
  height: 10px;
  margin-right: 6px;
  color: #37d5d3;
}

.emotion-3 {
  margin-left: -20px;
  margin-right: -20px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
}

.emotion-3.emotion-3 > * {
  -webkit-animation: animation-0 1.5s ease-in-out infinite;
  animation: animation-0 1.5s ease-in-out infinite;
  background: rgba(0,0,0,.05);
  color: transparent;
  cursor: progress;
}

<div
  style="width:240px;padding:20px;background:#eee"
>
  <div
    class="emotion-3"
  >
    <span
      class="emotion-0"
    />
    <svg
      class="emotion-2"
      height="20px"
      viewBox="0 0 1024 1024"
      width="20px"
    >
      <path
        class="emotion-1"
        d="M772 1012L511 761l-260 251a49 49 0 0 1-52 10c-18-7-29-24-29-43V132c0-25 21-46 47-46h588c26 0 47 21 47 46v847c0 19-11 36-29 43a49 49 0 0 1-51-10zM545 664l213 205V181H265v688l213-205c9-9 21-14 33-14s24 5 34 14z"
      />
    </svg>
    <span>
      TODO Loading
    </span>
  </div>
</div>
`;

exports[`Storyshots UI|Sidebar/SidebarItem nested depths 1`] = `
.emotion-1 {
  fill: currentColor;
}

.emotion-3 {
  margin-left: -20px;
  margin-right: -20px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  cursor: pointer;
}

.emotion-3:hover {
  background: rgba(0,0,0,.05);
}

.emotion-4 {
  display: block;
  width: 0;
  height: 0;
  margin-right: 4px;
  border-top: 3.5px solid transparent;
  border-bottom: 3.5px solid transparent;
  border-left: 3.5px solid #999999;
  -webkit-transition: -webkit-transform .1s ease-out;
  -webkit-transition: transform .1s ease-out;
  transition: transform .1s ease-out;
}

.emotion-2 {
  display: block;
  width: 10px;
  height: 10px;
  margin-right: 6px;
  color: #774dd7;
}

.emotion-8 {
  display: block;
  width: 0;
  height: 0;
  margin-right: 4px;
  border-top: 3.5px solid transparent;
  border-bottom: 3.5px solid transparent;
  border-left: 3.5px solid #999999;
  -webkit-transition: -webkit-transform .1s ease-out;
  -webkit-transition: transform .1s ease-out;
  transition: transform .1s ease-out;
  -webkit-transform: rotateZ(90deg);
  -ms-transform: rotateZ(90deg);
  transform: rotateZ(90deg);
}

.emotion-0 {
  display: block;
  width: 0;
  height: 0;
  margin-right: 4px;
  border-top: 3.5px solid transparent;
  border-bottom: 3.5px solid transparent;
  border-left: 3.5px solid #999999;
  -webkit-transition: -webkit-transform .1s ease-out;
  -webkit-transition: transform .1s ease-out;
  transition: transform .1s ease-out;
  border-left-color: transparent;
}

.emotion-15 {
  margin-left: -20px;
  margin-right: -20px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 25px;
  cursor: pointer;
}

.emotion-15:hover {
  background: rgba(0,0,0,.05);
}

.emotion-19 {
  margin-left: -20px;
  margin-right: -20px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 40px;
  cursor: pointer;
}

.emotion-19:hover {
  background: rgba(0,0,0,.05);
}

.emotion-23 {
  margin-left: -20px;
  margin-right: -20px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 55px;
  cursor: pointer;
}

.emotion-23:hover {
  background: rgba(0,0,0,.05);
}

<div
  style="width:240px;padding:20px;background:#eee"
>
  <div>
    <div
      class="emotion-3"
    >
      <span
        class="emotion-0"
      />
      <svg
        class="emotion-2"
        height="20px"
        viewBox="0 0 1024 1024"
        width="20px"
      >
        <path
          class="emotion-1"
          d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
        />
      </svg>
      <span>
        Depth 0
      </span>
    </div>
    <div
      class="emotion-3"
    >
      <span
        class="emotion-4"
      />
      <svg
        class="emotion-2"
        height="20px"
        viewBox="0 0 1024 1024"
        width="20px"
      >
        <path
          class="emotion-1"
          d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
        />
      </svg>
      <span>
        Depth 0
      </span>
    </div>
    <div
      class="emotion-3"
    >
      <span
        class="emotion-8"
      />
      <svg
        class="emotion-2"
        height="20px"
        viewBox="0 0 1024 1024"
        width="20px"
      >
        <path
          class="emotion-1"
          d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
        />
      </svg>
      <span>
        Depth 0
      </span>
    </div>
    <div
      class="emotion-15"
    >
      <span
        class="emotion-4"
      />
      <svg
        class="emotion-2"
        height="20px"
        viewBox="0 0 1024 1024"
        width="20px"
      >
        <path
          class="emotion-1"
          d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
        />
      </svg>
      <span>
        Depth 1
      </span>
    </div>
    <div
      class="emotion-19"
    >
      <span
        class="emotion-4"
      />
      <svg
        class="emotion-2"
        height="20px"
        viewBox="0 0 1024 1024"
        width="20px"
      >
        <path
          class="emotion-1"
          d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
        />
      </svg>
      <span>
        Depth 2
      </span>
    </div>
    <div
      class="emotion-23"
    >
      <span
        class="emotion-4"
      />
      <svg
        class="emotion-2"
        height="20px"
        viewBox="0 0 1024 1024"
        width="20px"
      >
        <path
          class="emotion-1"
          d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
        />
      </svg>
      <span>
        Depth 3
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI|Sidebar/SidebarItem story 1`] = `
.emotion-1 {
  fill: currentColor;
}

.emotion-3 {
  margin-left: -20px;
  margin-right: -20px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  cursor: pointer;
}

.emotion-3:hover {
  background: rgba(0,0,0,.05);
}

.emotion-0 {
  display: block;
  width: 0;
  height: 0;
  margin-right: 4px;
  border-top: 3.5px solid transparent;
  border-bottom: 3.5px solid transparent;
  border-left: 3.5px solid #999999;
  -webkit-transition: -webkit-transform .1s ease-out;
  -webkit-transition: transform .1s ease-out;
  transition: transform .1s ease-out;
  border-left-color: transparent;
}

.emotion-2 {
  display: block;
  width: 10px;
  height: 10px;
  margin-right: 6px;
  color: #37d5d3;
}

<div
  style="width:240px;padding:20px;background:#eee"
>
  <div
    class="emotion-3"
  >
    <span
      class="emotion-0"
    />
    <svg
      class="emotion-2"
      height="20px"
      viewBox="0 0 1024 1024"
      width="20px"
    >
      <path
        class="emotion-1"
        d="M772 1012L511 761l-260 251a49 49 0 0 1-52 10c-18-7-29-24-29-43V132c0-25 21-46 47-46h588c26 0 47 21 47 46v847c0 19-11 36-29 43a49 49 0 0 1-51-10zM545 664l213 205V181H265v688l213-205c9-9 21-14 33-14s24 5 34 14z"
      />
    </svg>
    <span>
      Story
    </span>
  </div>
</div>
`;

exports[`Storyshots UI|Sidebar/SidebarItem story isSelected 1`] = `
.emotion-1 {
  fill: currentColor;
}

.emotion-0 {
  display: block;
  width: 0;
  height: 0;
  margin-right: 4px;
  border-top: 3.5px solid transparent;
  border-bottom: 3.5px solid transparent;
  border-left: 3.5px solid #999999;
  -webkit-transition: -webkit-transform .1s ease-out;
  -webkit-transition: transform .1s ease-out;
  transition: transform .1s ease-out;
  border-left-color: transparent;
}

.emotion-3 {
  margin-left: -20px;
  margin-right: -20px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  cursor: default;
  background: #1EA7FD;
  color: #FFFFFF;
}

.emotion-2 {
  display: block;
  width: 10px;
  height: 10px;
  margin-right: 6px;
  color: #37d5d3;
  color: inherit;
}

<div
  style="width:240px;padding:20px;background:#eee"
>
  <div
    class="emotion-3"
  >
    <span
      class="emotion-0"
    />
    <svg
      class="emotion-2"
      height="20px"
      viewBox="0 0 1024 1024"
      width="20px"
    >
      <path
        class="emotion-1"
        d="M772 1012L511 761l-260 251a49 49 0 0 1-52 10c-18-7-29-24-29-43V132c0-25 21-46 47-46h588c26 0 47 21 47 46v847c0 19-11 36-29 43a49 49 0 0 1-51-10zM545 664l213 205V181H265v688l213-205c9-9 21-14 33-14s24 5 34 14z"
      />
    </svg>
    <span>
      Story
    </span>
  </div>
</div>
`;
